--- a/app/templates/index_heart.html
+++ b/app/templates/index_heart.html
@@ -1,29 +1,146 @@
 <!DOCTYPE html>
 <html>
+<header>
+  <div class="container">
+  <center>         <h2>Heart Disease Diagnostics</h2></center>
+  <center><img align="center" src="static/heart.jpg" width=2000px height=400px /></center>
+  </div>
+</header>
 
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+* {
+box-sizing: border-box;
+}
 
-   </head>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+body {
+margin: 0;
+font-family: Arial, Helvetica, sans-serif;
+}
+.topnav {
+overflow: hidden;
+background-color: #333;
+}
+.topnav a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
+.topnav a:hover {
+background-color: #ddd;
+color: black;
+}
+.topnav a.active {
+background-color: #4CAF50;
+color: white;
+}
+</style>
+</head>
+<body>
 
 
-   <body>
-      <div style="padding-left:16px">
-         <h2>Good Morning, Naomi!</h2>
-         <div>
-            <h1> {{result}} </h1>
-         </div>
-         <p></p>
+
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+	<h1> Dr. Heart </h1>
+	<img id="doc-image" src="static/cardiologist.png" width=300px height=300px alt="text">
+<p> Dr. Heart is a <b> Extra Trees Classifier </b> that can predict <br>
+the likelihood of heart disease.</p>
+	
+	</div>
+  </div>
+  <div class="column">
+    <div class="card">
+	<h1> Feature Importance</h1>
+	<img id="doc-image" src="static/feature_importance_bar_chart.png" width=300px height=300px alt="text">
+	<p> Patients are assessed for likelihood of heart disease  <br>
+    on 14 health features.</p>
+	</div>
+  </div>
+  <div class="column">
+    <div class="card">
+		<h1> Confusion Matrix  </h1>
+	<img id="doc-image" src="static/confusion_matrix.png" width=300px height=300px alt="text">
+	<p> Algorithm is reliable! <br>
+    False positive & true negatives are minimized!</p>
+	
+	</div>
+  </div>
+  <div class="column">
+    <div class="card">
+	<h1> Patient Prediction </h1>
+	<h3>
+    <br><br><br><br><br><br><br><br><br>
+      {{result}}
+    <br><br>
+    <br><br><br><br><br><br>	</b><p> Please fill out the form below to <br>
+    determine patient likelihood of heart disease!</p>
+    </h3>
+	</div>
+  </div>
+
       </div>
-   </body>
+	  <div id = "right">
+	  </div>
+      </h1>
+      <!--  <iframe name= "decisionTreeiframe" src="models/decisionTree.pdf" width = "1100px" height = "1000px"></iframe>
+         </iframe> -->
+      </p>
+   </div>
+   <div id= "symptom">
+   </div>
+   </div>
+   </BODY>
 
-   <meta charset="UTF-8">
+      <meta charset="UTF-8">
       <title>Patient Admission</title>
       <link href="static/css/form.css" rel="stylesheet" type="text/css">
       <script src="js/validation.js"></script>
-      </head>
       <div>
-      <img id="doc-image" align="left" src="static/cardiologist.png" width=400px height=500px  alt="text">
       <body class="zf-backgroundBg">
          <!-- Change or deletion of the name attributes in the input tag will lead to empty values on record submission-->
          <div class="zf-templateWidth">
@@ -106,7 +223,7 @@
                            <div class="zf-tempContDiv">
                               <span> <input type="text" name="trestbps" checktype="c2" value="" maxlength="18" id="trestbps"/></span> 
                               <p id="Number1_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">mmHg (unit)</p>
+                              <p class="zf-instruction">mmHg (unit); Range: 94 - 200. Mean: 131</p>
                            </div>
                            <div class="zf-clearBoth"></div>
                         </li>
@@ -119,7 +236,7 @@
                            <div class="zf-tempContDiv">
                               <span> <input type="text" name="chol" checktype="c2" value="" maxlength="18" id="chol"/></span> 
                               <p id="Number2_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">in mg/dl (unit)</p>
+                              <p class="zf-instruction">in mg/dl (unit); Range: 126 - 524. Mean: 246</p>
                            </div>
                            <div class="zf-clearBoth"></div>
                         </li>
@@ -145,7 +262,7 @@
                            <div class="zf-tempContDiv">
                               <span> <input type="text" name="thalach" checktype="c2" value="" maxlength="18" id="thalach"/></span> 
                               <p id="Number3_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">mmHg (unit)</p>
+                              <p class="zf-instruction">mmHg (unit); Range: 71-202. Mean: 150</p>
                            </div>
                            <div class="zf-clearBoth"></div>
                         </li>
@@ -176,19 +293,6 @@
                            <div class="zf-clearBoth"></div>
                         </li>
                         <!---------Dropdown Ends Here---------->
-                        <!---------Number thal Starts Here---------->
-                        <li class="zf-tempFrmWrapper zf-small">
-                           <label class="zf-labelName">Thal 
-                           <em class="zf-important">*</em>
-                           </label>
-                           <div class="zf-tempContDiv">
-                              <span> <input type="text" name="thal" checktype="c2" value="" maxlength="18" id="thal"/></span> 
-                              <p id="Number7_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">displays the thalassemia</p>
-                           </div>
-                           <div class="zf-clearBoth"></div>
-                        </li>
-                        <!---------Number Ends Here---------->
                         <!---------Number oldpeak Starts Here---------->
                         <li class="zf-tempFrmWrapper zf-small">
                            <label class="zf-labelName">ST depression induced by exercise relative to rest 
@@ -197,7 +301,7 @@
                            <div class="zf-tempContDiv">
                               <span> <input type="text" name="oldpeak" checktype="c2" value="" maxlength="18" id="oldpeak"/></span> 
                               <p id="Number5_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">Integer or Float value</p>
+                              <p class="zf-instruction">Range: 0-6. Mean: 1</p>
                            </div>
                            <div class="zf-clearBoth"></div>
                         </li>
@@ -214,13 +318,15 @@
                            </div>
                         </li>
                         <!---------Dropdown Ends Here---------->
-                        <!---------Number exang Starts Here---------->
+                        <!---------Number thal Starts Here---------->
                         <li class="zf-tempFrmWrapper zf-small">
-                           <label class="zf-labelName">Max Heart Rate 
+                           <label class="zf-labelName">Thalassemia 
                            <em class="zf-important">*</em>
                            </label>
                            <div class="zf-tempContDiv">
-                              <span> <input type="text" name="exang" checktype="c2" value="" maxlength="18" id="exang"/></span> 
+                              <span> <input type="number" name="thal" checktype="c2" value="" maxlength="18" id="thal"/></span> 
+                              <p class="zf-instruction">3 = normal 6 = fixed defect 7 = reversable defect
+</p>
                               <p id="Number4_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
                            </div>
                            <div class="zf-clearBoth"></div>
@@ -232,9 +338,9 @@
                            <em class="zf-important">*</em>
                            </label>
                            <div class="zf-tempContDiv">
-                              <span> <input type="text" name="ca" checktype="c2" value="" maxlength="18" id="ca"/></span> 
+                              <span> <input type="number" name="ca" checktype="c2" value="" maxlength="18" id="ca"/></span> 
                               <p id="Number6_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                              <p class="zf-instruction">0-3 values</p>
+                              <p class="zf-instruction">Range: 0-3 vessels</p>
                            </div>
                            <div class="zf-clearBoth"></div>
                         </li>
@@ -244,22 +350,23 @@
                   <!---------template Container Starts Here---------->
                   <ul>
                      <li class="zf-fmFooter"><button class="zf-submitColor" type=submit>Submit</button></li>
+                  <center><img align="center" src="static/digitalHeart.jpg" width=300px height=300px /></center>
                   </dl>
                   </ul>
                </div>
                <!-- 'zf-templateWrapper' ends -->
             </form>
          </div>
+
          </div>
          <!-- 'zf-templateWidth' ends -->
-         <script type="text/javascript">var zf_DateRegex = new RegExp("^(([0][1-9])|([1-2][0-9])|([3][0-1]))[-](Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec|JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)[-](?:(?:19|20)[0-9]{2})$");
+        <script type="text/javascript">var zf_DateRegex = new RegExp("^(([0][1-9])|([1-2][0-9])|([3][0-1]))[-](Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec|JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)[-](?:(?:19|20)[0-9]{2})$");
             var zf_MandArray = [ "Name_First", "Name_Last", "Number", "Dropdown", "Dropdown1", "Number1", "Number2", "Number3", "Dropdown2", "Dropdown3", "Number4", "Dropdown4", "Number5", "Dropdown5", "Number6", "Number7"]; 
             var zf_FieldArray = [ "Name_First", "Name_Last", "Number", "Dropdown", "Dropdown1", "Number1", "Number2", "Number3", "Dropdown2", "Dropdown3", "Number4", "Dropdown4", "Number5", "Dropdown5", "Number6", "Number7"]; 
             var isSalesIQIntegrationEnabled = false;
             var salesIQFieldsArray = [];
          </script>
    </div>
+   
    </div>
-
-   </body>
-</html>
+</HTML>
