--- a/app/templates/index_heart.html
+++ b/app/templates/index_heart.html
@@ -350,7 +350,7 @@ the likelihood of heart disease.</p>
                   <!---------template Container Starts Here---------->
                   <ul>
                      <li class="zf-fmFooter"><button class="zf-submitColor" type=submit>Submit</button></li>
-                  <center><img align="center" src="static/digitalHeart.jpg" width=300px height=300px /></center>
+                  <center><img align="center" src="static/digitalheart.jpg" width=300px height=300px /></center>
                   </dl>
                   </ul>
                </div>
